[package]
name = "hvcli"
version = "0.10.0"
edition = "2024"
authors = ["Hyperview Technologies Inc."]
description = "A command line interface to interact with asset data stored in Hyperview"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.23", features = ["derive"] }
color-eyre = "0.6.2"
confy = "2.0.0"
csv = "1.2.2"
dirs = "6.0.0"
env_logger = "0.11.3"
log = "0.4.20"
oauth2 = { version = "5.0.0", default-features = false, features = ["rustls-tls", "reqwest"] }
reqwest = { version = "0.12.4", default-features = false, features = ["json", "rustls-tls"] }
serde = "1.0.185"
serde_json = "1.0.105"
serde_with = "3.3.0"
thiserror = "2.0.3"
tokio = { version = "1.32.0", features = ["full"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }

[profile.release]
strip = true

[dev-dependencies]
httpmock = "0.8.0"
tempfile = "3.8.0"

